<resources>
    <string name="app_name">UD App</string>
    <string name="login">Login</string>
    <string name="username" translatable="false">Username</string>
    <string name="Password" translatable="false">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">353434001585-mj3ffh023odh71jn91qr1c0vabia5sfg.apps.googleusercontent.com</string>
</resources>