<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Login">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14"
        tools:context=".Login">

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/md_theme_primary_highContrast"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewLogin"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/layout_bg"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="20dp"
            android:textColor="@color/md_theme_secondaryContainer"
            android:textColorHint="@color/md_theme_secondaryContainer" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/layout_bg"
            android:drawableLeft="@drawable/baseline_key_24"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/md_theme_secondaryContainer"
            android:textColorHint="@color/md_theme_secondaryContainer" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/layout_bg"
                android:fontFamily="@font/poppins_regular"
                android:padding="10dp"
                android:text="LOGIN" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/layout_bg"
                android:fontFamily="@font/poppins_regular"
                android:padding="10dp"

                android:text="SIGN UP" />
        </LinearLayout>


        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_layout"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/md_theme_primary_highContrast"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/login_with"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgot_password"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="or login with"
            android:textColor="@color/md_theme_onSurfaceVariant"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/google"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_below="@+id/login_with"
            android:layout_centerHorizontal="true"
            android:src="@drawable/google"></ImageView>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>